모두를 위한 딥러닝 공부 시작

--- a/jupyter notebook IDE usage.ipynb
+++ b/jupyter notebook IDE usage.ipynb
@@ -83,6 +83,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 소스 수정 팁& 단축키\n",
+    "\n",
+    "| 커멘드(단축키) | 기능 |\n",
+    "| ----------- | --- |\n",
+    "|  tab  | 자동완성 |\n",
+    "| shift + tab | 객체/함수 정보 조회 |\n",
+    "|  name? | 객체 정보 조회(하단 프레임에 출력) 시 |\n",
+    "| name?? | 정의 및 help 확인(하단 프레임에 출력) 시 |\n",
+    "| \"_\" 사용 | 이전 실행된 Cell의 결과 사용을 위해 |\n",
+    "| ctrl + enter | 현재 Cell 실행 후 포커스 유지 |\n",
+    "| shift + enter | 현재 Cell 실행 후 다음 셀 활성화 |\n",
+    "| ctrl + shift + \"-\" | 현재 Cell 분할 |\n",
+    "| esc | 편집모드 -> 명령모드 |\n",
+    "| cmd + s | 저장 |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 자동완성, 객체 정보 조회 테스트\n",
+    "import numpy\n",
+    "a = numpy.abs(-10.0)\n",
+    "print(a)\n",
+    "a\n",
+    "a?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_ + 20.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### magic command\n",
+    "* line magic(%)과 cell magic(%%) command가 존재\n",
+    "* %cd : CWD 변경\n",
+    "* %run foo.py : foo.py 실행\n",
+    "* %lsmagic : 전체 magic command 조회\n",
+    "* %%latex : 모든 cell에 있는 latex를 번역\n",
+    "* %magic cmd 뒤에 ? 입력하면 help 하단 frame에 노출\n",
+    "* %%capture filename : 이후 실행되는 magic command의 결과가 지정된 file에 저장됨\n",
+    "\n",
+    "명령어 | 설명\n",
+    "--- | ---\n",
+    "%ls, %pwd, %cd | Path 관리\n",
+    "%history | command history 출력\n",
+    "%reset | 모든 정의된 변수 삭제\n",
+    "%%capture | 실행되는 명령에 대한 정보의 결과를 저장\n",
+    "%whos | 현재 정의된 변수 표시\n",
+    "%pdoc, %psource | help 실행\n",
+    "%timeit | 평균 실행 시간 출력\n",
+    "%bookmark | path에 대한 alias 설정\n",
+    "%%writefile | file 생성\n",
+    "%load | 파일을 셀에 로딩\n",
+    "%loadpy | python 파일 로드\n",
+    "%run | py 프록램 파일을 실행\n",
+    "%matplotlib inline | matplotlib 셀 로딩\n",
+    "%pdb | exception 발생 시 debugger 자동 진입\n",
+    "%debug | debug 처리\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -235,114 +333,6 @@
    ],
    "source": [
     "%lsmagic"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 소스 수정 팁& 단축키\n",
-    "\n",
-    "| 커멘드(단축키) | 기능 |\n",
-    "| ----------- | --- |\n",
-    "|  tab  | 자동완성 |\n",
-    "| shift + tab | 객체/함수 정보 조회 |\n",
-    "|  name? | 객체 정보 조회(하단 프레임에 출력) 시 |\n",
-    "| name?? | 정의 및 help 확인(하단 프레임에 출력) 시 |\n",
-    "| \"_\" 사용 | 이전 실행된 Cell의 결과 사용을 위해 |\n",
-    "| ctrl + enter | 현재 Cell 실행 후 포커스 유지 |\n",
-    "| shift + enter | 현재 Cell 실행 후 다음 셀 활성화 |\n",
-    "| ctrl + shift + \"-\" | 현재 Cell 분할 |\n",
-    "| esc | 편집모드 -> 명령모드 |\n",
-    "| cmd + s | 저장 |\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 자동완성, 객체 정보 조회 테스트\n",
-    "import numpy\n",
-    "a = numpy.abs(-10.0)\n",
-    "print(a)\n",
-    "a\n",
-    "#a?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30.0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_ + 20.0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "### magic command\n",
-    "* line magic(%)과 cell magic(%%) command가 존재\n",
-    "* %cd : CWD 변경\n",
-    "* %run foo.py : foo.py 실행\n",
-    "* %lsmagic : 전체 magic command 조회\n",
-    "* %%latex : 모든 cell에 있는 latex를 번역\n",
-    "* %magic cmd 뒤에 ? 입력하면 help 하단 frame에 노출\n",
-    "* %%capture filename : 이후 실행되는 magic command의 결과가 지정된 file에 저장됨\n",
-    "\n",
-    "명령어 | 설명\n",
-    "--- | ---\n",
-    "%ls, %pwd, %cd | Path 관리\n",
-    "%history | command history 출력\n",
-    "%reset | 모든 정의된 변수 삭제\n",
-    "%%capture | 실행되는 명령에 대한 정보의 결과를 저장\n",
-    "%whos | 현재 정의된 변수 표시\n",
-    "%pdoc, %psource | help 실행\n",
-    "%timeit | 평균 실행 시간 출력\n",
-    "%bookmark | path에 대한 alias 설정\n",
-    "%%writefile | file 생성\n",
-    "%load | 파일을 셀에 로딩\n",
-    "%loadpy | python 파일 로드\n",
-    "%run | py 프록램 파일을 실행\n",
-    "%matplotlib inline | matplotlib 셀 로딩\n",
-    "%pdb | exception 발생 시 debugger 자동 진입\n",
-    "%debug | debug 처리\n",
-    "\n",
-    "\n",
-    "\n"
    ]
   },
   {
@@ -509,6 +499,15 @@
     "from IPython.display import YouTubeVideo\n",
     "YouTubeVideo(\"lmoNmY-cmSI\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
