--- a/chapter2 python basic.ipynb
+++ b/chapter2 python basic.ipynb
@@ -4,31 +4,188 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1.4 모듈\n",
-    "기본 모듈과 3rd party packages 사용을 위해 ```import```를 사용해야한다."
+    "# 2장 파이썬 속성 강좌 \n",
+    "## 2.1 기본기 다지기\n",
+    "### 2.1.1 파이썬 설치하기\n",
+    "책의 내용은 python2.7 기준으로 작성됨.\n",
+    "python3를 사용하여도 무방함."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.2 The Zen of Python\n",
+    "> 무엇을 하든 그것을 할 수 있는 하나의, 가급적이면 단 하나의 당연한 방법이 존재해야 한다.\n",
+    "\n",
+    "여기서 **당연한** 방식으로 쓰여진 코드를 **파이썬스럽다(Pythonic)**고 한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.3 들여쓰기\n",
+    "* 코드의 단락을 구분하는 데 중괄호(curly braces, {}) 대신 들여쓰기를 사용한다.\n",
+    "* 공백문자는 소괄호(parentheses, ())와 대괄호(brackets, [])안에서는 무시된다. \n",
+    "    * 여러줄에 걸쳐 보기 좋게 expression을 작성할 경우 소괄호/ 대괄호로 expression을 묶거나 backslash 후 개행을 활용한다."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "    [1] 2\n",
+      "    [2] 3\n",
+      "    [3] 4\n",
+      "    [4] 5\n",
+      "    [5] 6\n",
+      "2\n",
+      "    [1] 3\n",
+      "    [2] 4\n",
+      "    [3] 5\n",
+      "    [4] 6\n",
+      "    [5] 7\n",
+      "3\n",
+      "    [1] 4\n",
+      "    [2] 5\n",
+      "    [3] 6\n",
+      "    [4] 7\n",
+      "    [5] 8\n",
+      "4\n",
+      "    [1] 5\n",
+      "    [2] 6\n",
+      "    [3] 7\n",
+      "    [4] 8\n",
+      "    [5] 9\n",
+      "5\n",
+      "    [1] 6\n",
+      "    [2] 7\n",
+      "    [3] 8\n",
+      "    [4] 9\n",
+      "    [5] 10\n",
+      "done looping\n"
+     ]
+    }
+   ],
+   "source": [
+    "prefix = \"    \"\n",
+    "for i in [1, 2, 3, 4, 5]:\n",
+    "    print(i)\n",
+    "    for j in [1, 2, 3, 4, 5]:\n",
+    "        print(prefix + \"[\" + str(j) + \"] \" + str(i + j))\n",
+    "print(\"done looping\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 코드의 가독성을 높이기 위해\n",
+    "long_winded_computation = (1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + 10 + 11 + 12 + \n",
+    "                           13 + 14 + 15 + 16 + 17 + 18 + 19 + 20)\n",
+    "\n",
+    "list_of_lists = [[1, 2, 3], \n",
+    "                 [4, 5, 6], \n",
+    "                 [7, 8, 9]]\n",
+    "\n",
+    "two_plus_three = 2 + \\\n",
+    "                 3\n",
+    "\n",
+    "# 빈 줄로 인한 오류 - python shell에서만 발생되는 문제. 지금도 그런가? - 잘되네요. -0-;\n",
+    "for i in [1, 2, 3, 4, 5]:\n",
+    "    \n",
+    "    # 빈 줄이 있다는 것을 확인\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.4 모듈\n",
+    "\n",
+    "* 기본 모듈과 3rd party packages 사용을 위해 ```import```를 사용해야한다.\n",
+    "* 이름이 겹치거나 반복 타이핑을 용이하게 하기 위해 별칭(alias)를 사용할 수 있다.\n",
+    "* `from 모듈 import 기능[들]` 과 같이 필요한 기능만 불러올 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function match at 0x101cbe378>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "re.compile(r'[0-9]+', re.IGNORECASE|re.UNICODE)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,22 +194,23 @@
     "# 정규표현식 사용을 위한 import\n",
     "# import re as regex  #alias 사용\n",
     "import re\n",
+    "print(match)\n",
     "my_regex = re.compile(\"[0-9]+\", re.I)\n",
     "my_regex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter()"
+       "defaultdict(int, {})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +221,46 @@
     "lookup = defaultdict(int)\n",
     "my_counter = Counter()\n",
     "lookup\n",
-    "my_counter"
+    "#my_counter\n",
+    "#defaultdict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `import X`\n",
+    "    * X 모듈을 현재의 namespace에 추가\n",
+    "    * `X.foo()` 와 같이 사용\n",
+    "    * X라는 이름의 충돌만 없다면 문제없음\n",
+    "* `from X import foo`\n",
+    "    * X 모듈의 foo를 현재의 namespace에 추가\n",
+    "    * `foo()` 와 같이 사용\n",
+    "    * foo라는 이름의 충돌만 없다면 문제없음\n",
+    "* `from X import *`\n",
+    "    * X 모듈에 정의된 모든 것을 현재의 namespace에 추가\n",
+    "    * `foo()` 와 같이 사용\n",
+    "    * 이름 충돌 발생할 가능성이 매우 높으며, 피해야하는 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function match at 0x101cbe378>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import가 기존 변수를 덮어쓸 수 있다. 피해야하는 사용법\n",
+    "match = 10\n",
+    "from re import *\n",
+    "print(match)"
    ]
   },
   {
@@ -76,8 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def double(x):\n",
@@ -87,8 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "double?"
@@ -96,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +306,7 @@
        "'testtest'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -126,13 +327,20 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-bfde5cc942fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdouble\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-25-a8449b08ed61>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdouble\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# TypeError 발생\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: double() missing 1 required positional argument: 'x'"
      ]
     }
    ],
    "source": [
     "double() # TypeError 발생"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "python의 함수들은 변수로 할당되거나 함수의 인자로 전달할 수 있다는 점에서 일급 함수(first-class)의 특성을 가진다."
    ]
   },
   {
