--- a/chapter2 python basic.ipynb
+++ b/chapter2 python basic.ipynb
@@ -917,7 +917,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 1. 단어 수를 세는 방법 : 키값 존재 여부 확인\n",
@@ -1013,7 +1015,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "document = \"\"\n",
@@ -1032,17 +1036,361 @@
    "metadata": {},
    "source": [
     "### 2.1.11 set\n",
-    "집합을 나타내는 컨테이너"
+    "* 집합을 나타내는 컨테이너\n",
+    "* 유니크한 항목을 가진다.\n",
+    "    * e.g. 중복된 원소를 제거\n",
+    "* `in` 오퍼레이션이 매우 빠르다. 통상적으로 O(1)\n",
+    "    * e.g. 수 많은 항목 중에서 특정 항목의 존재 여부 확인\n",
+    "\n",
+    "일반적으로 `dict`나 `list`를 더 자주 사용"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2}\n",
+      "2 True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = set()\n",
+    "s.add(1)\n",
+    "s.add(2)\n",
+    "s.add(2)\n",
+    "print(s)\n",
+    "x = len(s)\n",
+    "y = 2 in s\n",
+    "z = 3 in s\n",
+    "print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "list: 0.0004460000000001685\n",
+      "False\n",
+      "set: 0.00011300000000069588\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "sample = \"\"\"\n",
+    "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).\n",
+    "\"\"\"\n",
+    "text = \"\"\n",
+    "for i in range(1):\n",
+    "    text += sample\n",
+    "\n",
+    "hundreds_of_other_words = text.split(\" \")\n",
+    "stopwords_list = [\"a\", \"an\", \"at\"] + hundreds_of_other_words + [\"yet\", \"you\"]\n",
+    "start = time.clock()\n",
+    "print(\"zip\" in stopwords_list)\n",
+    "end = time.clock()\n",
+    "print(\"list:\", end - start)\n",
+    "\n",
+    "stopwords_set = set(stopwords_list)\n",
+    "start = time.clock()\n",
+    "print(\"zip\" in stopwords_set)\n",
+    "end = time.clock()\n",
+    "print(\"set:\", end - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.12 흐름제어\n",
+    "* `if` \n",
+    "    * `if-[elif]-[else]`\n",
+    "    * `true_value` if condition else `false_value`\n",
+    "* `while`\n",
+    "* `for-in`\n",
+    "* `continue`, `break`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "when all else fails use else (if you want to)\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 1 > 2:\n",
+    "    message = \"if only 1 were greater than two...\"\n",
+    "elif 1 > 3:\n",
+    "    message = \"elif stands for 'else if'\"\n",
+    "else:\n",
+    "    message = \"when all else fails use else (if you want to)\"\n",
+    "\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3항 연산자처럼 사용할 수 있다.  `true_value` if condition else `false_value`\n",
+    "x = 0\n",
+    "parity = \"even\" if x % 2 == 0 else \"odd\"\n",
+    "print(parity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is less than 10\n",
+      "1 is less than 10\n",
+      "2 is less than 10\n",
+      "3 is less than 10\n",
+      "4 is less than 10\n",
+      "5 is less than 10\n",
+      "6 is less than 10\n",
+      "7 is less than 10\n",
+      "8 is less than 10\n",
+      "9 is less than 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# while\n",
+    "x = 0\n",
+    "while x < 10:\n",
+    "    print(x, \"is less than 10\")\n",
+    "    x += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is less than 10\n",
+      "1 is less than 10\n",
+      "2 is less than 10\n",
+      "3 is less than 10\n",
+      "4 is less than 10\n",
+      "5 is less than 10\n",
+      "6 is less than 10\n",
+      "7 is less than 10\n",
+      "8 is less than 10\n",
+      "9 is less than 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for-in\n",
+    "for x in range(10):\n",
+    "    print(x, \"is less than 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# continue, break\n",
+    "for x in range(10):\n",
+    "    if x == 3:\n",
+    "        continue\n",
+    "    if x == 5:\n",
+    "        break\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.13 True와 False (Boolean)\n",
+    "* 항상 대문자로 시작 : `True`, `False`\n",
+    "* 존재하지 않는 값을 `None`으로 표기 (다른 언어의 null)\n",
+    "* 거짓을 의미하는 값들 (나머지 값은 참)\n",
+    "    * `False`\n",
+    "    * `None`\n",
+    "    * `[]` (빈 list)\n",
+    "    * `{}` (빈 dict)\n",
+    "    * \"\"\n",
+    "    * set()\n",
+    "    * 0\n",
+    "    * 0.0\n",
+    "* `and` 연산자 : 첫번째 값이 참이면 두 번째 값을 반환, 거짓이면 첫번째 값을 반환\n",
+    "* `or` 연산자 : 첫번째 값이 참이면 첫 번째 값을 반환, 거짓이면 두번째 값을 반환\n",
+    "* list관련 함수\n",
+    "    * all(list) : list의 모든 항목이 참이면 True\n",
+    "    * any(list) : list에 참인 항목이 하나라도 있으면 True    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_is_less_than_two = 1 < 2\n",
+    "print(one_is_less_than_two)\n",
+    "true_equals_false = True == False\n",
+    "print(true_equals_false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = None\n",
+    "print(x == None) # 파이썬스럽지 않음\n",
+    "print(x is None) # 파이썬스러움"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"some texts\"\n",
+    "if s:\n",
+    "    first_char = s[0]\n",
+    "else:\n",
+    "    first_char = \"\"\n",
+    "\n",
+    "# 위 코드는 다음과 같이 더욱 간단하게 표현할 수 있음\n",
+    "first_char = s and s[0]\n",
+    "\n",
+    "# 만약 x가 숫자거나 None이라면 safe_x는 항상 숫자\n",
+    "safe_x = x or 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all([True, 1, { 3 }])\n",
+    "all([True, 1, {}])\n",
+    "any([True, 1, {}])\n",
+    "all([])\n",
+    "any([])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 기본기에서 한 걸음 나아가기\n",
+    "### 2.2.1 정렬\n",
+    "* list의 sort 메서드: 오름차순 정렬\n",
+    "    * 기존 list의 변경없이 정렬된 목록을 반환받으려면 `sorted`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 1, 2, 3] [1, 2, 3, 4]\n",
+      "[1, 2, 3, 4] [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [4, 1, 2, 3]\n",
+    "y = sorted(x)\n",
+    "print(x, y)\n",
+    "x.sort()\n",
+    "print(x, y)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1070,7 +1418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
